# devtools-course-practice

modules/Lab#2/include/: Student.h
modules/Lab#2/src/: Student.cpp
modules/Lab#2/test/: CMakeLists.txt
modules/length-converter/src/: length-converter.cpp
modules/length-converter/test/: test-nifadyev-vadim-length-converter.cpp
modules/wages/: CMakeLists.txt  CTestTests.txt  README.md
modules/wages/application/: Application.cpp  CMakeLists.txt  prime-numbers.cpp  wages_app.cpp  wages_app_main.cpp
modules/wages/include/: Application.h  prime-numbers-app.h  wages_app.h
modules/wages/src/: PrimeNumbers.cpp  Wages.cpp  wages_app.cpp
modules/wages/test/: test_Application.cpp  test_prime_numbers_app.cpp  test_tipanov_daniil_prime_numbers.cpp  test_wages.cpp  test_wages_app.cpp
